--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -1,7 +1,7 @@
-footer p {
+footer {
   position: absolute;
   width: 100%;
-  bottom: 20px;
+  bottom: 0;
   padding: 1em;
   margin: 0;
   color: white;
