--- a/scss/utilities/_extends.scss
+++ b/scss/utilities/_extends.scss
@@ -29,6 +29,10 @@
   padding: 5px;
 }
 
-%pagBackground {
+%pageBG1 {
   background: $color-background-four;
+}
+
+%pageBG2 {
+  background: $color-background-five;
 }
