--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -2,8 +2,10 @@
 $color-background-primary: rgba(28, 43, 60, 0.75);
 $color-background-secondary: rgba(0, 0, 0, 0.5);
 $color-background-tertiary: rgba(0, 0, 0, 0.65);
-$color-background-four: rgba(48, 73, 101, 0.95);
+$color-background-four: rgba(48, 73, 101, 0.65);
+$color-background-five: rgba(48, 73, 101, 0.95);
 
 $color-font-primary: black;
 $color-font-secondary: white;
 $color-font-tertiary: #6092ca;
+$color-font-four: #1c2b3c;
